[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Links.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/system.png" type="Texture" id=2]
[ext_resource path="res://Objects/Deathbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/GlitchEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/SimpleCollider.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Settings.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/World.gd" type="Script" id=8]
[ext_resource path="res://Images/taskbar.png" type="Texture" id=9]
[ext_resource path="res://Sounds/static.ogg" type="AudioStream" id=10]
[ext_resource path="res://Objects/LoadingCircle.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "End"
length = 3.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("../GlitchEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GlitchEffect:amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0833333, 0.2, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.03, 0.5, 0.05 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.98333, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -80.0, -15.0, -45.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../Credits")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_is_open"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.5

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.6, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 9 ), Vector2( 204.8, 9 ), Vector2( 300, 9 ), Vector2( 900, 9 ), Vector2( 931, 9 ), Vector2( 1024, 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "load_anim_complete"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../LoadingCircle:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../LoadingFade:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "show_funny_string"
}, {
"args": [ true ],
"method": "show_funny_string"
}, {
"args": [ true ],
"method": "show_funny_string"
}, {
"args": [ true ],
"method": "show_funny_string"
}, {
"args": [ false ],
"method": "show_funny_string"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../GlitchEffect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../GlitchEffect:amount")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.03, 0.5, 0.03 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AudioStreamPlayer:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -15.0 ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("AudioStreamPlayer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="World" type="Node2D"]
pause_mode = 2
script = ExtResource( 8 )
current_level = ExtResource( 1 )

[node name="Deathbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 520, 2242 )

[node name="Deathbox2" parent="." instance=ExtResource( 3 )]
position = Vector2( 553, -1094 )

[node name="SimpleCollider" parent="." instance=ExtResource( 5 )]
position = Vector2( -11, 437 )
scale = Vector2( 1, 64 )

[node name="SimpleCollider2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1035, 437 )
scale = Vector2( 1, 64 )

[node name="Level" type="Node2D" parent="."]
pause_mode = 1
show_behind_parent = true

[node name="GlitchEffect" parent="." instance=ExtResource( 4 )]

[node name="LoadingFade" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 938.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="ColorRect" parent="."]
show_behind_parent = true
margin_top = 938.0
margin_right = 931.0
margin_bottom = 947.0
color = Color( 0.952941, 0.607843, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loading"]
anims/End = SubResource( 1 )
anims/LoadFinished = SubResource( 2 )
anims/LoadLevel = SubResource( 3 )
next/End = "LoadFinished"
next/LoadLevel = "LoadFinished"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Loading"]
stream = ExtResource( 10 )
volume_db = -80.0

[node name="system" type="Sprite" parent="."]
position = Vector2( 512, 512 )
texture = ExtResource( 2 )

[node name="Refresh" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 124.0
margin_top = 47.0
margin_right = 183.0
margin_bottom = 105.0
focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabTitle" type="Label" parent="."]
margin_left = 67.0
margin_top = 19.0
margin_right = 253.0
margin_bottom = 51.0
text = "New Tab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingCircle" parent="." instance=ExtResource( 12 )]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 353, 36 )

[node name="FunnyStrings" type="Label" parent="."]
visible = false
margin_left = 8.0
margin_top = 903.0
margin_right = 315.0
margin_bottom = 935.0
custom_colors/font_color = Color( 0.65098, 0.290196, 0.25098, 1 )
text = "owo uwu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = 183.0
margin_top = 149.0
margin_right = 832.0
margin_bottom = 870.0

[node name="Settings" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 149.0
margin_top = 124.0
margin_right = 798.0
margin_bottom = 845.0

[node name="BunIcon" type="Sprite" parent="."]
position = Vector2( 160, 986 )
texture = ExtResource( 9 )
flip_h = true
hframes = 2
vframes = 3

[node name="NotepadIcon" type="Sprite" parent="."]
position = Vector2( 261, 986 )
texture = ExtResource( 9 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 76, 202, 76 )
region_filter_clip = true

[node name="NotepadButton" type="Button" parent="NotepadIcon"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -50.0
margin_top = -38.0
margin_right = 51.0
margin_bottom = 38.0
focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsIcon" type="Sprite" parent="."]
position = Vector2( 362, 986 )
texture = ExtResource( 9 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 152, 202, 76 )
region_filter_clip = true

[node name="SettingsButton" type="Button" parent="SettingsIcon"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -50.0
margin_top = -38.0
margin_right = 51.0
margin_bottom = 38.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="pressed" from="NotepadIcon/NotepadButton" to="." method="_on_NotepadButton_pressed"]
[connection signal="pressed" from="SettingsIcon/SettingsButton" to="." method="_on_SettingsButton_pressed"]
